added DOM manipulation and a basic UI

--- a/project files/rcp.html
+++ b/project files/rcp.html
@@ -2,11 +2,30 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="rcp.js"></script>
+    <script src="rcp.js" defer></script>
     <title>rock paper scissors</title>
 </head>
 
 <body>
     
+    <button id="rock">rock</button>
+    <br>
+    <button id="paper">paper</button>
+    <br>
+    <button id="scissors">scissors</button>
+
+    <div>Result of match: 
+        <span id="result">Choose an option</span>
+    </div>
+
+    <br>
+
+    <div>
+       User score:  <span id="uscore">0</span>
+       <br>
+        Computer score: <span id="cscore">0</span>
+    </div>
+
+    <div id="winner"></div>
 </body>
 </html>
